--- a/.env.example
+++ b/.env.example
@@ -1,18 +1,20 @@
-# Copy this file to .env.local and fill in the missing values
+# Local Development Environment
+# Copy this to .env.local and update with your local Supabase credentials
 
 # =============================================================================
-# Supabase Configuration
+# Local Supabase Configuration
 # =============================================================================
-NEXT_PUBLIC_SUPABASE_URL=
-NEXT_PUBLIC_SUPABASE_ANON_KEY=
-SUPABASE_SERVICE_ROLE_KEY=
+NEXT_PUBLIC_SUPABASE_URL=http://127.0.0.1:54321
+NEXT_PUBLIC_SUPABASE_ANON_KEY=sb_publishable_ACJWlzQHlZjBrEguHvfOxg_3BJgxAaH
+SUPABASE_SERVICE_ROLE_KEY=sb_secret_N7UND0UgjKTVK-Uodkm0Hg_xSvEMPvz
 
 # =============================================================================
 # Event Configuration
 # =============================================================================
 NEXT_PUBLIC_EVENT_NAME="DevFest Managua 2025"
-NEXT_PUBLIC_EVENT_ID=00000000-0000-0000-0000-000000000000
+NEXT_PUBLIC_EVENT_ID=11111111-1111-1111-1111-111111111111
 NEXT_PUBLIC_EVENT_CODE=DEVFEST2025
+NEXT_PUBLIC_APP_DOMAIN=devfest.raandino.dev
 ADMIN_EMAILS=aandino186@gmail.com
 
 # =============================================================================
@@ -21,13 +23,13 @@ ADMIN_EMAILS=aandino186@gmail.com
 CONNECTIONS_REQUIRE_APPROVAL=false
 
 # =============================================================================
-# Google auth Configuration
+# Google Auth Configuration (Optional for local)
 # =============================================================================
 SUPABASE_AUTH_EXTERNAL_GOOGLE_CLIENT_ID=
 SUPABASE_AUTH_EXTERNAL_GOOGLE_CLIENT_SECRET=
 
 # =============================================================================
-# Resend Configuration (Email Service)
+# Resend Configuration (Optional for local - emails go to Mailpit)
 # =============================================================================
 RESEND_API_KEY=
 RESEND_FROM_EMAIL=
