--- a/package.json
+++ b/package.json
@@ -14,10 +14,12 @@
   },
   "dependencies": {
     "@hookform/resolvers": "^3.9.0",
+    "@radix-ui/react-avatar": "^1.1.10",
     "@radix-ui/react-checkbox": "^1.3.1",
     "@radix-ui/react-dialog": "^1.1.15",
     "@radix-ui/react-dropdown-menu": "^2.1.14",
     "@radix-ui/react-label": "^2.1.6",
+    "@radix-ui/react-scroll-area": "^1.2.10",
     "@radix-ui/react-separator": "^1.1.7",
     "@radix-ui/react-slot": "^1.2.2",
     "@radix-ui/react-switch": "^1.2.6",
@@ -29,6 +31,7 @@
     "algoliasearch": "^5.37.0",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "date-fns": "^4.1.0",
     "lucide-react": "^0.511.0",
     "motion": "^12.23.15",
     "next": "latest",
@@ -38,6 +41,7 @@
     "react-dom": "^19.0.0",
     "react-hook-form": "^7.53.0",
     "react-instantsearch": "^7.16.3",
+    "react-phone-number-input": "^3.4.13",
     "tailwind-merge": "^3.3.0",
     "uuid": "^13.0.0",
     "zod": "^3.23.8",
