feat: add basePath support for API calls and update configurations
BasePath Configuration:
- Configure Next.js with basePath: '/networking'
- Configure assetPrefix: '/networking'
- App now works under /networking subpath for orchestrator integration

API Client Helper:
- Create apiFetch() helper in lib/api-client.ts
- Automatically prepends basePath to API calls
- Handles client-side fetch calls correctly
- Add NEXT_PUBLIC_BASE_PATH environment variable

Updated Components:
- notification-bell.tsx: Use apiFetch for all API calls
- Fixes 404 errors when accessing via /networking path

External Service Updates:
- Google OAuth: Added redirect URIs for /networking paths
- Supabase: Updated Site URL and redirect URLs
- Ready for gdgmanagua.dev/networking deployment

Webhook Improvements:
- Add optional signature verification to Resend webhook
- Check for svix headers when RESEND_WEBHOOK_SECRET is set
- Improve security for production webhooks

Bug Fixes:
- Fix confirmation email issue with shouldCreateUser: false
- Prevent new account creation from login form
- Guide users to use invitation link if account doesn't exist

Documentation:
- Add ORCHESTRATOR_SETUP.md with complete integration guide
- Include proxy configuration examples
- Testing checklist and troubleshooting guide

Remaining Work:
- Update 7 more files to use apiFetch (see grep results)
- Add NEXT_PUBLIC_BASE_PATH to Vercel environment
- Test on devfest.raandino.dev/networking
- Set up orchestrator proxy at gdgmanagua.dev

This allows the app to be served at gdgmanagua.dev/networking
while being hosted on Vercel at devfest.raandino.dev

--- a/.env.example
+++ b/.env.example
@@ -15,6 +15,7 @@ NEXT_PUBLIC_EVENT_NAME="DevFest Managua 2025"
 NEXT_PUBLIC_EVENT_ID=11111111-1111-1111-1111-111111111111
 NEXT_PUBLIC_EVENT_CODE=DEVFEST2025
 NEXT_PUBLIC_APP_DOMAIN=devfest.raandino.dev
+NEXT_PUBLIC_BASE_PATH=/networking
 ADMIN_EMAILS=aandino186@gmail.com
 
 # =============================================================================
